nixidy/generated/prod/librechat/StatefulSet-librechat-mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/controller: mongodb
    app.kubernetes.io/instance: librechat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: librechat
  name: librechat-mongodb
  namespace: ai
spec:
  podManagementPolicy: OrderedReady
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: mongodb
      app.kubernetes.io/instance: librechat
      app.kubernetes.io/name: librechat
  serviceName: librechat
  template:
    metadata:
      annotations:
        checksum/configMaps: 99b4ba563881bdf41be6a10590ce5d5e88454eaa8b10db10a69f160ac44b2e06
      labels:
        app.kubernetes.io/controller: mongodb
        app.kubernetes.io/instance: librechat
        app.kubernetes.io/name: librechat
    spec:
      automountServiceAccountToken: false
      containers:
        - image: mongo:7@sha256:1f995ad6fdb93244a1addab1b58f934a0bc2f5643c38e02f5e9d7f0c7d227a7b
          name: mongodb
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - mountPath: /data/db
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: librechat
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
