nixidy/generated/prod/librechat/Service-librechat-librechat-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: librechat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: librechat
    app.kubernetes.io/service: librechat-librechat-mongodb
  name: librechat-librechat-mongodb
  namespace: ai
spec:
  ports:
    - name: mongodb
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app.kubernetes.io/controller: mongodb
    app.kubernetes.io/instance: librechat
    app.kubernetes.io/name: librechat
  type: ClusterIP
