nixidy/generated/prod/librechat/Service-librechat.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: librechat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: librechat
    app.kubernetes.io/service: librechat
  name: librechat
  namespace: ai
spec:
  ports:
    - name: http
      port: 3080
      protocol: TCP
      targetPort: 3080
  selector:
    app.kubernetes.io/controller: librechat
    app.kubernetes.io/instance: librechat
    app.kubernetes.io/name: librechat
  type: ClusterIP
