nixidy/generated/prod/librechat/HTTPRoute-librechat.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librechat
  namespace: ai
spec:
  hostnames:
    - chat.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: librechat
          port: 3080
